--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,17 @@
     ],
     "require": {
         "php": "^8.0",
-        "laravel/framework": "^9.0|^10.0|^11.0"
+        "laravel/framework": "^9.0|^10.0|^11.0|^12.0"
     },
     "require-dev": {
+        "laravel/pint": "^1.24.0",
+        "orchestra/testbench": "^10.9",
+        "peckphp/peck": "^0.1.3",
+        "pestphp/pest": "^4.1.0",
+        "pestphp/pest-plugin-type-coverage": "^4.0.2",
+        "phpstan/phpstan": "^2.1.26",
+        "rector/rector": "^2.1.7",
+        "symfony/var-dumper": "^7.3.3"
     },
     "autoload": {
         "psr-4": {
@@ -31,13 +39,30 @@
             "Crumbls\\HelpDesk\\Tests\\": "tests"
         }
     },
-    "scripts": {
-        "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest --coverage",
-        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
-    },
+  "scripts": {
+    "lint": "pint",
+    "refactor": "rector",
+    "test:type-coverage": "pest --type-coverage --exactly=100",
+    "test:typos": "peck",
+    "test:lint": "pint --test",
+    "test:unit": "pest --coverage --exactly=100",
+    "test:types": "phpstan",
+    "test:refactor": "rector --dry-run",
+    "test": [
+      "@test:lint",
+      "@test:type-coverage",
+      "@test:typos",
+      "@test:unit",
+      "@test:types",
+      "@test:refactor"
+    ]
+  },
     "config": {
-        "sort-packages": true
+      "sort-packages": true,
+      "preferred-install": "dist",
+      "allow-plugins": {
+        "pestphp/pest-plugin": true
+      }
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
